--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Dynamic Brand Equity"
+date: '`r format(Sys.time(), "%B %d, %Y %H:%M")`'
 output:
   html_notebook:
     code_folding: show
@@ -8,6 +9,7 @@ output:
     theme: flatly
     toc: yes
     toc_float: yes
+    fig_caption: true
 ---
 
 # Basic Setup
@@ -32,6 +34,8 @@ viz_dir <- paste0(base_dir, "viz/")
 
 dir.create(data_dir, showWarnings = FALSE)
 dir.create(viz_dir, showWarnings = FALSE)
+
+panderOptions('big.mark', ',')
 ```
 
 # Data Size Assessment
@@ -40,7 +44,7 @@ Before we begin loading data, let's start by assessing the data size of each of 
 
 ## Tissue Category
 
-We use the shell construction `find . -name "myfile" | xargs wc - l` to recursively find a file with a particular regular expression construction and then perform the line count.
+We use the shell command `find . -name "myfile" | xargs wc - l` to recursively find a file with a particular regular expression construction and then perform the line count.
 
 ```{r}
 tissue_category <- "factiss"
@@ -72,8 +76,8 @@ tissue_weekly_files <-
     dplyr::select(file, records, records_clean)
 
 tissue_weekly_files %>% 
-    select(file, records_clean)
-    pander()
+    select(file, records = records_clean) %>%
+    pander(justify = c("left","right"))
 ```
 
 ## Carbonated Beverage Category
@@ -111,8 +115,8 @@ carbbev_weekly_files <-
     
 
 carbbev_weekly_files %>% 
-    select(file, records_clean)
-    pander()
+    select(file, records = records_clean) %>%
+    pander(justify = c("left","right"))
 ```
 
 # UPC Lookup Table
@@ -154,14 +158,14 @@ tissue_upc <-
     select(iri_year, everything())
 ```
 
-Below is a table of the first 100 records.
+Below is a table of the first 20 records.
 
 ```{r}
 tissue_upc %>% 
     select(parent_company, vendor, brand) %>%
     distinct() %>%
     arrange(parent_company, vendor, brand) %>%
-    head(100)
+    head(20)
 ```
 
 ## Carbonated Beverage Category
@@ -203,11 +207,11 @@ There are six *sub-categories*:
 carbbev_upc %>%
     group_by(small_category) %>%
     summarise(`UPC's` = n()) %>%
-    arrange(`UPC's`) %>%
-    pander()
+    arrange(desc(`UPC's`)) %>%
+    pandoc.table(justify = c("left","right"))
 ```
 
-Even excluding the categories, there are 1,019 *company / vender / brand* combinations. Below are the first 100:
+Even excluding the categories, there are 1,019 *company / vender / brand* combinations. Below are the first 20:
 
 ```{r}
 carbbev_upc %>% 
@@ -219,7 +223,7 @@ carbbev_upc %>%
 
 # Sales Information
 
-To load the sales information we can write a function that will load each file using `read_table` and then add the year information as the first column.
+To load the sales information we can write a function that will load each file using `read_fwf` (with the column widths found by reviewing the files). We do not use `read_table` as this can potentially be unreliable with large datasets (see [Hadly's comment](https://github.com/tidyverse/readr/issues/518#issuecomment-268872538)). We also add the year, store type, and ID (row number for reference) as preceding columns.
 
 ```{r}
 fn_load_weekly_file <- function(filename) {
@@ -227,9 +231,23 @@ fn_load_weekly_file <- function(filename) {
     drug_or_groc <- str_match(filename, "drug|groc")[, 1]
     column_widths <- c(7, 5, 3, 3, 6, 6, 6, 9, 5, 2, 2)
     column_names <- c('IRI_KEY','WEEK','SY','GE','VEND','ITEM','UNITS','DOLLARS','F','D','PR')
+    column_types <- cols(
+                      IRI_KEY = col_character(),
+                      WEEK = col_integer(),
+                      SY = col_character(),
+                      GE = col_character(),
+                      VEND = col_character(),
+                      ITEM = col_character(),
+                      UNITS = col_integer(),
+                      DOLLARS = col_double(),
+                      `F` = col_character(),
+                      D = col_integer(),
+                      PR = col_integer()
+                    )
     
     read_fwf(paste0(volume_dir, str_replace(filename, ".", "")), 
-             fwf_widths(column_widths, column_names), skip = 1, progress = FALSE) %>%
+             fwf_widths(column_widths, column_names), col_types = column_types,
+             skip = 1, progress = FALSE) %>%
         mutate(iri_year = year_num, id = row_number(), store_type = drug_or_groc) %>%
         select(iri_year, id, store_type, everything())
 }
@@ -245,10 +263,9 @@ fn_integrity_check <- function(dt) {
 }
 ```
 
-
 ## Tissue Category
 
-We load each of the store datasets and perform data integrity checks. We show that the number of records load is one less than we found with the `wc -l` shell command (due to the header) and that the number of records unique on store / week / upc (`SY`, `GE`, `VEND`, `ITEM`) is the total number of records loaded. 
+We load each of the store datasets and perform data integrity checks. We show that the number of records loaded is one less than we found with the `wc -l` shell command (due to the header) and that the number of records unique on store / week / upc (`SY`, `GE`, `VEND`, `ITEM`) is the total number of records loaded. 
 
 ```{r results = 'asis'}
 tissue_files <- tissue_weekly_files$file[-length(tissue_weekly_files$file)]
@@ -265,22 +282,19 @@ lapply(tissue_files_list, fn_integrity_check) %>%
                             if_else(records_raw == (records - n + 1) & unique_records == records_raw, "Yes","No"), 
                             if_else(records_raw == (records - 1) & unique_records == records_raw, "Yes","No"))
     ) %>%
-    mutate(
-        `Records Loaded` = prettyNum(records_raw, big.mark = ',')
-        , `Unique on Store/Week/UPC` = prettyNum(unique_records, big.mark = ',')
-    ) %>%
-    select(File = file, Records = records_clean, `Records Loaded`, `Unique on Store/Week/UPC`, `Pass?`) %>%
-    pander(split.table = Inf)
+    select(File = file, Records = records_clean, `Records Loaded` = records_raw, 
+           `Unique on Store/Week/UPC` = unique_records, `Pass?`) %>%
+    pander(split.table = Inf, justify = c('left', 'right','right','right','center'))
 ```
 
-We can show that all tissue UPC's are **`r table(sapply(tissue_upc$upc, nchar))` characters by 
+We are going to construct a UPC column from the columns SY, GE, VEND, and ITEM in the sales information table. We can show that all tissue UPC's in the UPC Lookup Table are **`r table(sapply(tissue_upc$upc, nchar))`** characters long by
 
 ```{r results = 'asis'}
 table(sapply(tissue_upc$upc, nchar)) %>%
     pander()
 ```
 
-Now we need to create a UPC from the components and properly name the columns.
+We create a UPC from the components and properly name the columns.
 
 ```{r}
 tissue_weekly2 <- 
@@ -295,7 +309,7 @@ tissue_weekly2 <-
         select(iri_year, iri_key, week, upc, units, dollars, avg_price, feature, display, price_reduction)
 ```
 
-Now, let's check that this dataset is indeed at the store (iri_key) - week - upc level of detail. 
+Now, let's verify again that this dataset is indeed at the store (iri_key) - week - UPC level of detail, with the new UPC column.
 
 ```{r results = 'asis'}
 data_frame(
@@ -353,7 +367,7 @@ This passes our data integrity check, so we'll combine the 3 time windows datase
 tissue_final <- bind_rows(tissue_weekly_1_to_6, tissue_weekly_7, tissue_weekly_8_to_11)
 
 tissue_final %>%
-    head(10)
+    head(20)
 ```
 
 
